# nexierge-ai

./: .gitignore  main.py  pyproject.toml  speed_test.py
app/agents/: agent.py  hotel_agent.py  router.py
app/api/: chat.py
app/brains/: router.py
app/core/: context.py  context_builder.py  intent_router.py  llm.py  logging_config.py  message_builder.py  openai_client.py  policy_loader.py  prompt_loader.py  workflow_finder.py
app/integrations/: xano_client.py
app/models/: __init__.py  agent_response.py  brain.py  chat_request.py  message.py  openai_message.py  router_response.py  tool_call.py  tool_result.py  workflow_state.py
app/rag/: embeddings.py  knowledge_chunk.py  knowledge_item.py  knowledge_repository.py  knowledge_service.py  media_retriever.py  pinecone_client.py  retriever.py  settings.py
app/services/: response_generator.py
app/tools/: executor.py  registry.py  search_knowledge.py  service_catalog_repository.py
prompts/brains/: guest_in_stay.md  lead_and_unknown.md
prompts/policies/: handoff.md  rag.md  tone.md
